Upgrading dependencies
Change-Id: Id68f27dd30bd824427f6129e91ea218ef443b546