@@ -6,9 +6,12 @@ import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.util.ClassUtils;
 
+import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.lang.annotation.Annotation;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
@@ -22,7 +25,7 @@ public class SpringFactoriesTest {
 
     @Test
     public void testRegisteredAutoConfigurations() {
-        List<String> classNames = loadFactoryNames(EnableAutoConfiguration.class);
+        List<String> classNames = loadFactoryNames();
         List<? extends Class<?>> autoConfigurationClasses = classNames.stream().map(this::loadClass).collect(Collectors.toList());
         assertThat(autoConfigurationClasses).allMatch(new HasAnnotation(Configuration.class)).hasSize(10);
     }
@@ -35,20 +38,15 @@ public class SpringFactoriesTest {
         }
     }
 
-    private static List<String> loadFactoryNames(Class<?> aClass) {
-        try (InputStream is = SpringFactoriesTest.class.getClassLoader().getResourceAsStream("META-INF/spring.factories")) {
+    private static List<String> loadFactoryNames() {
+        try (InputStream is = SpringFactoriesTest.class.getClassLoader()
+                .getResourceAsStream("META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports")) {
             if (is == null) {
                 throw new RuntimeException("Cannot load spring.factories");
             }
-            Properties props = new Properties();
-            props.load(is);
-            String value = props.getProperty(aClass.getName());
-            if (value == null) {
-                return Collections.emptyList();
-            }
-            return Stream.of(value.split(",")).collect(Collectors.toList());
+            return new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8)).lines().toList();
         } catch (IOException e) {
-            throw new RuntimeException("Cannot load " + aClass, e);
+            throw new RuntimeException("Cannot load resources", e);
         }
     }
 
